@@ -73,6 +73,10 @@ rm -fr %{buildroot}
 * @RELDATE@ Daniel Veillard <veillard@redhat.com>
 - upstream release @VERSION@
 
+* Thu Aug 19 2004 Daniel Veillard <veillard@redhat.com> 0.0.6-1
+- fixes simple file monitoring should close RH #129974
+- relocate gam_server in $(libexec)
+
 * Thu Aug  5 2004 Daniel Veillard <veillard@redhat.com> 0.0.5-1
 - Fix a crash when the client binary forks the gam_server and an
   atexit handler is run.
