@@ -1,3 +1,8 @@
+Thu Aug 19 15:38:55 CEST 2004 Daniel Veillard <veillard@redhat.com>
+
+	* Makefile.am configure.in gamin.spec.in: release of 0.0.6
+	* doc/gamin-api.xml doc/gamin-refs.xml: rebuilt
+
 Thu Aug 19 14:40:58 CEST 2004 Daniel Veillard <veillard@redhat.com>
 
 	* server/gam_poll.c: fixing dnotify and FAM events sequences when
